--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    password: springstudent
-    username: springstudent
-    url: jdbc:mysql://localhost:3306/modern_bank_atm_reporting
+    password: ${DB_PASSWORD}
+    username: ${DB_USERNAME}
+    url: ${DATABASE_URL}
   jpa:
     properties:
       javax:
