Integrate Spring Boot Actuator and Prometheus Metrics
- Add `spring-boot-starter-actuator` and `micrometer-registry-prometheus` dependencies to `pom.xml`.
- Configure application.yml to expose health, metrics, and Prometheus endpoints.
- Enable detailed health information and export metrics with application tagging.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,3 +65,17 @@ feign:
       sendNotificationRequest: /notification/send
 server:
   port: 8085
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, metrics, prometheus, circuitbreakers, circuitbreakerevents
+  endpoint:
+    health:
+      show-details: always
+  metrics:
+    export:
+      enabled: true
+    tags:
+      application: ${spring.application.name}
